<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:orderInCategory="100"
        android:title="mais"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/btSobre"
                android:icon="@drawable/ic_info_black_24dp"
                android:orderInCategory="-1"
                android:title="@string/sobre"
                app:showAsAction="never" />

            <item
                android:id="@+id/btAtualizar"
                android:icon="@drawable/ic_refresh_black_24dp"
                android:orderInCategory="-1"
                android:title="@string/atualizar"
                app:showAsAction="never" />

            <item
                android:id="@+id/btSair"
                android:icon="@drawable/ic_close_black_24dp"
                android:orderInCategory="-1"
                android:title="@string/sair"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>