<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comente"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_edittext_todo"
        android:hint="Digite aqui"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:maxEms="5"
        android:maxLines="7"
        android:maxLength="256" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border_edittext_todo"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btEnviar"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border_edittext_todo"
            android:text="@string/salvar" />
    </LinearLayout>


</LinearLayout>