<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_gravity="center_vertical"
    android:layout_marginRight="20dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:srcCompat="@mipmap/logo"
        android:layout_marginTop="20dp"
        android:id="@+id/imageView" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:paddingBottom="10dp"
        android:textAlignment="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:background="@color/whiteSame"
                android:id="@+id/editEmail"
                android:hint="nome@email.com.br"
                />
        </LinearLayout>


</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:onClick="Login"
        android:id="@+id/btEnviar"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdaemail"
        android:gravity="center"
        android:fontFamily="casual"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:textColor="@color/blue"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        />
    </RelativeLayout>
</LinearLayout>