<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="12dp"

        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvForm"
            android:textSize="18dp"
            android:text="@string/form"/>
        <Spinner
            android:id="@+id/spinnerForm"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:background="@drawable/border_appointmentbook"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodo"
            android:textSize="18dp"
            android:id="@+id/tvPeriodo"
            android:layout_marginLeft="16dp"/>
        <Spinner
            android:id="@+id/spinnerPeriodo"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:background="@drawable/border_appointmentbook"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:textSize="18dp"
            android:id="@+id/tvSite"
            android:text="@string/site"/>

        <Spinner
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:background="@drawable/border_appointmentbook"
            android:layout_marginLeft="10dp"
            android:id="@+id/spinnerSite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:textSize="18dp"
            android:id="@+id/tvSync"
            android:text="@string/sinc"/>

        <Spinner
            android:id="@+id/spinnerSync"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:background="@drawable/border_appointmentbook"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/listViewSync"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:dividerHeight="0dp"
        android:divider="@null"
        android:layout_weight=".7">

        </ListView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/load"
        android:layout_gravity="center_horizontal|center_vertical">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:indeterminate="true" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="@string/sinc"
        android:gravity="left|center"
        android:paddingLeft="35dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/play"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_button_logout"
        android:id="@+id/buttonSync" />

</LinearLayout>