<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border_appointmentbook"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/nomeForm"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:id="@+id/textView" />

                <TextView
                    android:id="@+id/tvNomeForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/tituloPergunta"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tvNumeroPergunta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:maxLines="1"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/resposta_nao_conforme"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tvtextoTodo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>