<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/starting"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="Form"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/spinnerForm"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:background="@drawable/border_iniciar"
                    android:layout_marginLeft="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="38dp"
                android:paddingRight="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editSite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:background="@color/whiteSame"
                    android:focusable="false" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data"
                    android:textSize="20dp"

                    />

                <EditText
                    android:id="@+id/editData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@color/white"
                    android:focusable="false" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/appointmentBook"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/border_button_home"
                android:src="@drawable/calendar" />

            <ImageButton
                android:id="@+id/start"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border_button_home"
                android:src="@drawable/start" />

            <ImageButton
                android:id="@+id/home"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border_button_home"
                android:src="@drawable/home" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="65dp"
                android:layout_marginTop="5dp"
                android:text="AGENDA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="70dp"
                android:layout_marginTop="5dp"
                android:text="INICIAR" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="HOME" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>